# modflow-devtools

./: .gitignore  .gitmodules  .pylintrc  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER.md  HISTORY.md  MANIFEST.in  README.md  cliff.toml  conftest.py  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: ci.yml  make_package.yml  modflow-devtools-linting-install.yml  release.yml  release_dispatch.yml  reusable_release.yml
autotest/: conftest.py  pytest.ini  test_build.py  test_download.py  test_executables.py  test_figspec.py  test_fixtures.py  test_markers.py  test_misc.py  test_ostags.py  test_snapshots.py  test_zip.py
autotest/__snapshots__/test_fixtures/: test_binary_array_snapshot_multi.npy  test_multi_array_snapshot.npz  test_text_array_snapshot.txt
autotest/__snapshots__/test_snapshots/: test_readable_text_array_snapshot.txt
docs/: conf.py  index.rst
docs/md/: act.md  cases.md  doctoc.md  download.md  executables.md  figspec.md  fixtures.md  install.md  latex.md  markers.md  ostags.md  release.md  snapshots.md  timed.md  timeit.md  zip.md
mfdevtools/: __init__.py  config.py
modflow-devtools/: __init__.py
modflow_devtools/: __init__.py  build.py  case.py  common_regression.py  compare.py  config.py  context.py  download.py  executables.py  figspec.py  fixtures.py  framework.py  http.py  imports.py  latex.py  markers.py  mftest_context.py  misc.py  ostags.py  setup.py  simulation.py  snapshots.py  targets.py  usgsprograms.py  zip.py
modflow_devtools/test/: conftest.py  test_build.py  test_case.py  test_conftest.py  test_download.py  test_executables.py  test_fixtures.py  test_framework.py  test_markers.py  test_misc.py  test_ostags.py  test_setup.py  test_zip.py
modflow_devtools/testing/: testing.py
modflow_devtools/utilities/: build_exes.py  download.py  get_exes.py  mftest_exe.py  usgsprograms.py
scripts/: lint.py  update_version.py
