[metadata]
name = modflow-devtools
version = file: version.txt
description = modflow-devtools is a Python package containing tools for MODFLOW development.
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
author = Joseph D. Hughes
author_email = modflow@usgs.gov
maintainer = Joseph D. Hughes
maintainer_email = jdhughes@usgs.gov
license = CC0
license_files = LICENSE.md
platform = Windows, Mac OS-X, Linux
keywords = MODFLOW, development
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Hydrology
url = https://github.com/MODFLOW-USGS/modflow-devtools
download_url = https://pypi.org/project/modflow-devtools
project_urls =
    Documentation = https://mfpymake.readthedocs.io
    Bug Tracker = https://github.com/MODFLOW-USGS/modflow-devtools/issues
    Source Code = https://github.com/MODFLOW-USGS/modflow-devtools

[options]
include_package_data = True
zip_safe = False
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    pytest

[options.extras_require]
lint =
    black
    cffconvert
    flake8
    isort
    pylint
test =
    %(lint)s
    coverage
    flaky
    filelock
    meson!=0.63.0
    ninja
    pytest-cases
    pytest-cov
    pytest-dotenv
    pytest-xdist
    PyYaml


[flake8]
exclude =
    .git
    __pycache__
    build
    dist
    autotest
ignore =
    # https://flake8.pycqa.org/en/latest/user/error-codes.html
    F401,
    # https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
    # Indentation
    E121, E122, E126, E127, E128,
    # Whitespace
    E203, E221, E222, E226, E231, E241,
    # Import
    E402,
    # Line length
    E501, E502,
    # Statement
    E722, E741,
    # Whitespace warning
    W291, W292, W293,
    # Blank line warning
    W391,
    # Line break warning
    W503, W504
statistics = True
